kompose_production_ver1/ingress-gce-letsencrypt/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledeployment
  labels:
    app: sampleapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - name: samplecontainer
        image: nginx:1.7.9
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
