kompose_production_ver1/ingress-gce-letsencrypt/serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp-service
  labels:
    app: sampleapp
spec:
  type: NodePort
  selector:
    app: sampleapp
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
