kompose_production_ver1/ingress-gce-letsencrypt/ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sampleapp-ingress
  annotations:
    # specify the name of the global IP address resource to be associated with the HTTP(S) Load Balancer.
    kubernetes.io/ingress.global-static-ip-name: "geneesplaats-nl-static-ip"
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # controls whether the ingress is modified ‘in-place’,
    # or a new one is created specifically for the HTTP01 challenge.
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: sampleapp
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - geneesplaats.nl
    secretName: sampleapp-cert-secret # < cert-manager will store the created certificate in this secret
  rules:
  - host: geneesplaats.nl
    http:
      paths:
      - path: /sample/app/path/*
        backend:
          serviceName: sampleapp-service
          servicePort: 8080
